--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,3 +60,21 @@ body {
     border: 1px solid #fff; 
     padding: 5px; 
 }
+
+.carousel-item .col {
+  transition: transform 0.3s ease, box-shadow 0.3s ease,
+}
+
+.carousel-item .col:hover {
+  transform: rotate(0.5deg);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); 
+  
+}
+.socialIcon{
+  display: flex;
+    justify-content: center; 
+    align-items: center; 
+    gap: 20px; 
+    margin-top: 50px; 
+    height: 100px; 
+}
