--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,4 +77,23 @@ body {
     gap: 20px; 
     margin-top: 50px; 
     height: 100px; 
+    
+}
+
+.footer-links ul {
+  padding: 0; 
+  margin: 0; 
+}
+
+.footer-links ul li {
+  list-style-type: none; 
+  margin: 0;
+  padding: 0; 
+  font-size: 0.9rem; 
+  transition: color 0.3s ease-in-out; 
+}
+
+.footer-links ul li:hover {
+  color: #fff !important; 
+  cursor: pointer; 
 }
