--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,7 @@ body {
   border-radius: 0 !important;
   background-color: black !important;
 }
+
 .icon-container {
     display: inline-flex; 
     justify-content: center;
@@ -97,3 +98,17 @@ body {
   color: #fff !important; 
   cursor: pointer; 
 }
+.container {
+  max-width: 600px;
+}
+
+.profileTitle{
+  font-weight: 400;
+  margin-bottom: 8px;
+  font-size:50px;
+}
+
+input, select, button {
+  border-radius: 0 !important;
+}
+
